# silok

./: .env  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile.in  build.sh  docker-compose.yml  readme.md
backend/: Dockerfile  Doxyfile.in
backend/src/silok/infra/: logger.hpp  user_token.hpp
backend/src/silok/infra/logger/: spdlog_logger.cpp  spdlog_logger.hpp
backend/src/silok/infra/manager/: account_manager.cpp  account_manager.hpp  note_manager.cpp  note_manager.hpp  project_manager.hpp  tag_manager.cpp
backend/src/silok/infra/password_hasher/: crypt_password_hasher.cpp  crypt_password_hasher.hpp
backend/test/: CMakeLists.txt
backend/test/silok/: test_account_management.cpp
cmake/modules/: FindODB.cmake
docs/doxygen/html/: dir_68267d1309a1af8e8297ef4c3efbcdba.html  graph_legend.html
frontend/: Dockerfile
models/: model.hpp  note.hpp  note_project.hpp  note_tag.hpp  project.hpp  tag.hpp  user.hpp  user_note.hpp  user_project.hpp  user_tag.hpp
silok/: app.py  card_container.py  main.py  main_layout.py
src/: CMakeLists.txt  main.cpp
src/silok/: account_manager.cpp  account_manager.hpp  crypt.hpp  data.hpp  data_utils.hpp  dummy.cpp  jwt_utils.hpp  logger.hpp  model.hpp  note.hpp  storage_manager.hpp
src/silok/application/: account_service.cpp  account_service.hpp  note_service.cpp  note_service.hpp  tag_service.cpp  tag_service.hpp  user_service.cpp  user_service.hpp
src/silok/crypt/: password_hasher.cpp  password_hasher.hpp
src/silok/data/: common.hpp  project.hpp  tag.hpp  user.hpp
src/silok/db/base/: base_db_connection.hpp  base_db_statement.hpp  base_schema_manager.hpp
src/silok/db/sql/: sqlite_db_connection.cpp  sqlite_db_connection.hpp  sqlite_db_statement.cpp  sqlite_db_statement.hpp  sqlite_schema_manager.hpp
src/silok/domain/: base_logger.hpp  base_note_repository.hpp  base_password_hasher.hpp  base_user_repository.hpp  crypt.hpp  data.hpp  data_relation.hpp  model.hpp  model_relation.hpp  note.hpp  note_user.hpp  user.hpp  user_token.hpp
src/silok/domain/repository/: base_note_repository.hpp  base_project_repository.hpp  base_relationship_repository.hpp  base_tag_repository.hpp  base_user_repository.hpp
src/silok/infra/: logger.hpp  storage_manager.hpp
src/silok/infra/manager/: account_manager.cpp  account_manager.hpp  note_manager.cpp  note_manager.hpp  project_manager.cpp  project_manager.hpp  storage_manager.hpp  tag_manager.cpp  tag_manager.hpp  utils.hpp
src/silok/infra/password_hasher/: crypt_password_hasher.cpp
src/silok/infra/repository/: note_project_repository.cpp  note_project_repository.hpp  note_repository.cpp  note_repository.hpp  note_tag_repository.cpp  note_tag_repository.hpp  project_repository.cpp  project_repository.hpp  tag_repository.cpp  tag_repository.hpp  user_note_repository.cpp  user_note_repository.hpp  user_project_repository.cpp  user_project_repository.hpp  user_repository.cpp  user_repository.hpp  user_tag_repository.cpp  user_tag_repository.hpp
src/silok/manager/: account_manager.cpp  account_manager.hpp  note_manager.cpp  note_manager.hpp  project_manager.cpp  project_manager.hpp  storage_manager.hpp  tag_manager.cpp  tag_manager.hpp  utils.hpp
src/silok/repository/: base_repository.hpp  project_repository.cpp  project_repository.hpp  sqlite_repository.cpp  sqlite_repository.hpp  tag_repository.cpp  tag_repository.hpp  user_repository.cpp  user_repository.hpp
test/: CMakeLists.txt  test_dummy.cpp  test_main.cpp  test_note_service.cpp  test_odb.cpp  test_project_repository.cpp  test_sqlite_db.cpp  test_sqlite_repository.cpp  test_tag_repository.cpp  test_tag_service.cpp  test_user_repository.cpp  test_user_service.cpp
test/silok/: test_account_management.cpp  test_note_manager.cpp  test_project_manager.cpp  test_tag_manager.cpp
test/silok/application/: test_account_service.cpp
test/silok/infra/repository/: test_note_project_repository.cpp  test_note_repository.cpp  test_note_tag_repository.cpp  test_project_repository.cpp  test_tag_repository.cpp  test_user_note_repository.cpp  test_user_project_repository.cpp  test_user_repository.cpp  test_user_tag_repository.cpp
tools/: odb_gen.py
